Se crea la sección footer

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         class="contact"
         id="contact"
     >
-        <div class="container">
+        <div class="container mb-120">
             <div class="d-flex flex-wrap justify-center">
                 <h6 class="best col-12 text-center">Get in touch</h6>
 
@@ -586,14 +586,111 @@
                 <span class="serv-transp">Contact</span>
             </div>
 
-            <div class="container-blog">
-                
+            <div class="container d-flex justify-arround">
+                <div class="input-container"><input type="text" placeholder="Name" class="input-contact col-4"></div>
+                <div class="input-container"><input type="email" placeholder="Email" class="input-contact col-4"></div>
+                <div class="input-container"><input type="number" placeholder="Telephone" class="input-contact col-4"></div>
+            </div>
+            <div class="container d-flex justify-arround">
+                <div class="input-container"><textarea placeholder="Message" class="input-contact col-4" rows="4"></textarea></div>
+            </div>
+            <div class="col-12">
+                <div class="text-center">
+                    <button type="submit"
+                        class="simple-btn"><span>Send Message</span></button>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Fin Blog -->
 
+    <!-- FOOTER -->
+    <div class="d-flex">
+        <div class="left-footer-container col-6">
+            <div class="container direction-column mt-120">
+                <div class="logo d-flex mb-1">
+                    <a href="#">
+                        <img
+                            class="logo"
+                            src="./assets/img/logo david.png"
+                            alt="Logo"
+                        >
+                    </a>
+                </div>
+                <h3 class="mb-1">Email: davalerova@protonmail.com</h3>
+                <h3 class="mb-1">Addres: Calle 144 #111-21 Apto 302 Bogotá, Colombia</h3>
+                <h3 class="mb-1">Phone: +57 3125794335</h3>
+                <h3 class="mb-1">FOLLOW ME</h3>
+                <div class="social-icon mb-120">
+                    <a
+                        href="https://github.com/davalerova"
+                        target="_blank"
+                    >
+                        <img
+                            class="icon"
+                            src="./assets/img/github.svg"
+                            alt="Github"
+                        >
+                    </a>
+
+                    <a
+                        href="https://codepen.io/davalerova"
+                        target="_blank"
+                    >
+                        <img
+                            class="icon"
+                            src="./assets/img/codepen.svg"
+                            alt="Codepen"
+                        >
+                    </a>
+
+                    <a
+                        href="https://www.linkedin.com/in/david-andres-valero-vanegas/"
+                        target="_blank"
+                    >
+                        <img
+                            class="icon"
+                            src="./assets/img/l.svg"
+                            alt="Linkedin"
+                        >
+                    </a>
+
+                    <a
+                        href="https://twitter.com/DavalerovaDavid"
+                        target="_blank"
+                    >
+                        <img
+                            class="icon"
+                            src="./assets/img/t.svg"
+                            alt="Twitter"
+                        >
+                    </a>
+
+                    <a
+                        href="https://www.instagram.com/davalerova/"
+                        target="_blank"
+                    >
+                        <img
+                            class="icon"
+                            src="./assets/img/instagram.svg"
+                            alt="Instagram"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="right-footer-container col-6">
+            <div class="container direction-column mt-120">
+                <h3 class="mb-1">NEWSLATTER</h3>
+                
+            </div>
+        </div>
+    </div>
+
+    <!-- FIN FOOTER -->
+
     <script src="./assets/js/scroll.js"></script>
+    <script src="./assets/js/menu.js"></script>
 </body>
 </html>
