Se agrega responsive

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         class="about"
         id="about"
     >
-        <div class="about container row">
+        <div class="about-container container">
             <div class="description col-6">
                 <h3 class="about-title">
                     <span class="puntos">.:</span>
@@ -597,7 +597,8 @@
             <div class="col-12">
                 <div class="text-center">
                     <button type="submit"
-                        class="simple-btn"><span>Send Message</span></button>
+                        class="simple-btn"><span>Send Message</span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -606,7 +607,7 @@
     <!-- Fin Blog -->
 
     <!-- FOOTER -->
-    <div class="d-flex">
+    <div class="footer-container">
         <div class="left-footer-container col-6">
             <div class="container direction-column mt-120">
                 <div class="logo d-flex mb-1">
@@ -683,14 +684,33 @@
         <div class="right-footer-container col-6">
             <div class="container direction-column mt-120">
                 <h3 class="mb-1">NEWSLATTER</h3>
+                <h4 class="mb-2">Sign up for subscribe out newsletter!</h4>
+                    <div class="row email align-center justify-center mb-2"><input type="text" placeholder="Your Email"></div>
+                    
+                        <button type="submit mb-1">SUBSCRIBE</button>
                 
+                        <h3 class="mb-2">INSTAGRAM POST</h3>   
+                        <div class="row">
+                            <img
+                            class="photo mr-1"
+                            src="http://innovationplans.com/idesign/avo2/avo-light/img/clients/1.jpg"
+                            alt="">
+                            <img
+                            class="photo mr-1"
+                            src="http://innovationplans.com/idesign/avo2/avo-light/img/clients/2.jpg"
+                            alt="">
+                            <img
+                            class="photo mr-1"
+                            src="http://innovationplans.com/idesign/avo2/avo-light/img/clients/3.jpg"
+                            alt="">
+                        </div>
             </div>
         </div>
     </div>
 
     <!-- FIN FOOTER -->
 
-    <script src="./assets/js/scroll.js"></script>
+    <!-- <script src="./assets/js/scroll.js"></script> -->
     <script src="./assets/js/menu.js"></script>
 </body>
 </html>
