--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
 
             <div class="card-services d-flex align-center justify-between">
-                <div class="card-service col-4 align-center justify-between text-center">
+                <div class="card-service col-4 align-center justify-between text-center mb-1">
                     <img
                         class="icon back-color-transparent"
                         src="./assets/img/gran-ancla.svg"
@@ -235,7 +235,7 @@
                     </h3>
                 </div>
 
-                <div class="card-service col-4 align-center justify-between text-center">
+                <div class="card-service col-4 align-center justify-between text-center mb-1">
                     <img
                         class="icon back-color-transparent"
                         src="./assets/img/smartphone.svg"
@@ -249,7 +249,7 @@
                     </h3>
                 </div>
 
-                <div class="card-service col-4 align-center justify-between text-center">
+                <div class="card-service col-4 align-center justify-between text-center mb-1">
                     <img
                         class="icon back-color-transparent"
                         src="./assets/img/camera.svg"
@@ -444,7 +444,7 @@
         id="testimonials"
     >
         <div class="container d-flex direction-column">
-            <h6 class="best col-12 text-center">What people says</h6>
+            <h6 class="best col-12 text-center">What people says?</h6>
 
             <h3 class="test col-12 text-center">Testimonials.</h3>
 
