--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     </section>
 
     <!-- Fin Blog -->
-    <!-- Inicio Blog -->
+    <!-- Inicio Contact -->
 
     <section
         class="contact"
@@ -586,7 +586,7 @@
                 <span class="serv-transp">Contact</span>
             </div>
 
-            <div class="container d-flex justify-arround">
+            <div class="container-contact d-flex justify-arround">
                 <div class="input-container"><input type="text" placeholder="Name" class="input-contact col-4"></div>
                 <div class="input-container"><input type="email" placeholder="Email" class="input-contact col-4"></div>
                 <div class="input-container"><input type="number" placeholder="Telephone" class="input-contact col-4"></div>
@@ -604,7 +604,7 @@
         </div>
     </section>
 
-    <!-- Fin Blog -->
+    <!-- Fin Contact -->
 
     <!-- FOOTER -->
     <div class="footer-container">
@@ -690,7 +690,7 @@
                         <button type="submit mb-1">SUBSCRIBE</button>
                 
                         <h3 class="mb-2">INSTAGRAM POST</h3>   
-                        <div class="row">
+                        <div class="row justify-center">
                             <img
                             class="photo mr-1"
                             src="http://innovationplans.com/idesign/avo2/avo-light/img/clients/1.jpg"
