Se crea menú hamburguesa

--- a/index.html
+++ b/index.html
@@ -120,12 +120,14 @@
                     >
                 </a>
             </div>
-
-            <ul class="d-flex justify-between align-center col-6">
+            <div class="icono-menu">
+                <img src="assets/img/open-menu.png" alt="" id="icono-menu">
+            </div>
+            <ul class="d-flex justify-between align-center col-6 cont-menu" id="menu">
                 <li class="col-2 d-flex justify-flexend">
                     <a
                         href="#"
-                        class="active"
+                        class="item-active"
                     >Home</a>
                 </li>
 
