Se agrega hoja de vida y botón para descargar

--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
                 <h4 class="about-description">
                     Hello!, I'm David Valero. Web designer from Bogotá Colombia. I have rich experience in web site design and building, also I am good at wordpress. I love to talk with you about our unique.
                 </h4>
+                <div class="col-12">
+                    <div class="text-center">
+                        <button
+                            class="simple-btn"><a href="./assets/CV David Andres Valero Vanegas 1014221407.pdf" download><span>Download CV</span></a>
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <div class="skills col-6 d-flex direction-column align-center">
