--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                     </a>
                 </div>
                 <h3 class="mb-1">Email: <span>davalerova@protonmail.com</span></h3>
-                <h3 class="mb-1">Addres: <span>Calle 144 #111-21 Apto 302 Bogotá, Colombia</span></h3>
+                <h3 class="mb-1">Addres: <span>Bogotá, Colombia</span></h3>
                 <h3 class="mb-1">Phone: <span>+57 3125794335</span></h3>
                 <h3 class="mb-1">FOLLOW ME</h3>
                 <div class="social-icon mb-120">
