Se agregan dos proyectos con despliegue a producción

--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
               <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
               <img class="technology-icon" src="assets/img/bootstrap.svg" alt="HTML-5" title="HTML-5">
               <img class="technology-icon" src="assets/img/chartjs.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/sqlite.svg" alt="postgresql"
-                title="postgresql">
+              <img class="technology-icon" src="assets/img/sqlite.svg" alt="postgresql" title="postgresql">
             </div>
 
             <button class="button-git">
@@ -342,8 +341,8 @@
               <img class="technology-icon" src="assets/img/angular.svg" alt="Java FX" title="Java FX">
               <img class="technology-icon" src="assets/img/ionic.svg" alt="HTML-5" title="HTML-5">
               <img class="technology-icon" src="assets/img/android.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/api.svg" alt="postgresql"
-                title="postgresql">
+              <img class="technology-icon" src="assets/img/sass.svg" alt="HTML-5" title="HTML-5">
+              <img class="technology-icon" src="assets/img/api.svg" alt="postgresql" title="postgresql">
             </div>
 
 
@@ -375,8 +374,7 @@
               <img class="technology-icon" src="assets/img/html-5.svg" alt="HTML-5" title="HTML-5">
               <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
               <img class="technology-icon" src="assets/img/bootstrap.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/sqlite.svg" alt="postgresql"
-                title="postgresql">
+              <img class="technology-icon" src="assets/img/sqlite.svg" alt="postgresql" title="postgresql">
             </div>
 
             <button class="button-git">
@@ -387,6 +385,87 @@
             </button>
           </div>
         </div>
+
+        <div class="card-container">
+          <img src="assets/img/hjcelectronis.png" alt="">
+
+          <br>
+
+          <div class="second-cantainer">
+            <h2>HJCElectronis</h2>
+
+            <p>
+              This project involves creating a dynamic website and online store for HJC Electronics using WordPress and
+              WooCommerce.
+              The website provides a user-friendly experience with a homepage that showcases products through a modern
+              design and dynamic slider,
+              detailed product pages, and a blog for updates. The site features a seamless shopping cart and checkout
+              process, customer account management,
+              mobile optimization, and robust security measures. It integrates social media platforms to enhance user
+              engagement and includes a direct
+              link to WhatsApp for immediate customer support.
+            </p>
+
+            <div class="technologies-list">
+              <img class="technology-icon" src="assets/img/PHP.svg" alt="Java" title="Java">
+              <img class="technology-icon" src="assets/img/wordpress.svg" alt="Java FX" title="Java FX">
+              <img class="technology-icon" src="assets/img/woocommerce.svg" alt="Java FX" title="Java FX">
+              <img class="technology-icon" src="assets/img/hostinger.svg" alt="postgresql" title="postgresql">
+              <img class="technology-icon" src="assets/img/mysql-official.svg" alt="Java FX" title="Java FX">
+            </div>
+
+            <button class="button-git">
+              <a href="https://hjcelectronis.com/" target="_blank">
+                <img class="icon-git" src="./assets/img/github.svg" alt="Github">
+              </a>
+
+            </button>
+          </div>
+        </div>
+
+
+        <div class="card-container">
+          <img src="assets/img/Ubitherm.png" alt="">
+
+          <br>
+
+          <div class="second-cantainer">
+            <h2>Ubitherm WebApp for IoT</h2>
+
+            <p>
+              This project involves developing a single-page web application that features user login and
+              authentication,
+              using Firebase for real-time data storage. The application displays temperature readings from a sensor on
+              individual cards and graphs up to five temperatures in real-time. Users can view the data in a tabular
+              format
+              and have the option to export it as a CSV file. This setup ensures efficient monitoring and data
+              management,
+              ideal for environments needing continuous temperature tracking. The use of Firebase Realtime Database
+              enables
+              immediate updates and seamless user experiences across devices, while built-in authentication enhances
+              security.
+              The application’s interface is intuitive, ensuring that users easily navigate through the temperature data
+              and export functionalities as needed.
+            </p>
+
+            <div class="technologies-list">
+              <img class="technology-icon" src="assets/img/javascript-1.svg" alt="Python" title="Python">
+              <img class="technology-icon" src="assets/img/html-5.svg" alt="HTML-5" title="HTML-5">
+              <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
+              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="HTML-5" title="HTML-5">
+              <img class="technology-icon" src="assets/img/Highcharts.svg" alt="HTML-5" title="HTML-5">
+              <img class="technology-icon" src="assets/img/Firebase.svg" alt="postgresql" title="postgresql">
+            </div>
+
+            <button class="button-git">
+              <a href="https://ubitherm.web.app/" target="_blank">
+                <img class="icon-git" src="./assets/img/github.svg" alt="Github">
+              </a>
+
+            </button>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
