Update about me

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <h1>David Valero</h1>
 
-        <h4>Web Developer</h4>
+        <h4>Full-Stack Developer</h4>
 
         <div class="social-icon">
           <a href="https://github.com/davalerova" target="_blank">
@@ -118,13 +118,33 @@
         </h3>
 
         <h2 class="about-subtitle">
-          My mission is design develop the best Websites around.
+          Innovating in technology with passion and precision.
         </h2>
 
         <h4 class="about-description">
-          Hello!, I'm David Valero. Web designer from Bogotá Colombia. I have rich experience in web site design and
-          building, also I am good at wordpress. I love to talk with you about our unique.
+          Hello!, I'm David Valero. I am a final semester Systems Engineering student at the Escuela Tecnológica
+          Instituto Técnico Central, distinguished multiple times for my academic excellence. My journey in technology
+          started with a degree in Electronics Technology from Corporación Universitaria Minuto de Dios, which sparked
+          my passion for automating processes and system maintenance.
         </h4>
+        <h4 class="about-description">
+          Professionally, I am a Full-Stack Developer and Researcher with experience at the International Center for
+          Physics in Bogotá, where I developed web platforms for IoT device management and maintained mobile
+          applications. My freelance work includes creating customized online stores and websites, showcasing my
+          versatility in handling diverse programming needs.
+        </h4>
+
+        <h4 class="about-description">
+          My technical proficiency spans several languages including Python, JavaScript, C, and Java, and I am skilled
+          in using tools like Node.js, React, MongoDB, and Firebase. I am also familiar with cloud environments such as
+          AWS and GCP, which complements my interest in IoT and data science.
+        </h4>
+        <h4 class="about-description">
+          Beyond my technical skills, I am an enthusiastic pianist, avid reader, and FPV drone enthusiast, which adds a
+          creative and analytical edge to my professional persona. I am deeply committed to continuous learning, evident
+          from my numerous certifications in Python, cloud technologies, and data visualization.
+        </h4>
+
         <div class="col-12">
           <div class="text-center">
             <button class="simple-btn"><a href="./assets/CV David Andres Valero Vanegas 1014221407.pdf"
@@ -136,7 +156,7 @@
 
       <div class="skills col-6 d-flex direction-column align-center">
         <div class="ui col-12">
-          <h2>UI / UX DESIGN</h2>
+          <h2>Continuous Learning</h2>
 
           <div class="uibarout">
             <div class="uibarin"></div>
@@ -144,7 +164,7 @@
         </div>
 
         <div class="ui col-12">
-          <h2>DEVELOPMENT</h2>
+          <h2>Effective Communication</h2>
 
           <div class="uibarout">
             <div class="devbarin"></div>
@@ -152,12 +172,59 @@
         </div>
 
         <div class="ui col-12">
-          <h2>GRAPHIC DESIGN</h2>
+          <h2>Problem Solving</h2>
 
           <div class="uibarout">
             <div class="grbarin"></div>
           </div>
         </div>
+        <div class="ui col-12">
+          <h2>Leadership</h2>
+
+          <div class="uibarout">
+            <div class="uibarin"></div>
+          </div>
+        </div>
+
+        <div class="ui col-12">
+          <h2>Teamwork</h2>
+
+          <div class="uibarout">
+            <div class="devbarin"></div>
+          </div>
+        </div>
+
+        <div class="ui col-12">
+          <h2>Adaptability</h2>
+
+          <div class="uibarout">
+            <div class="grbarin"></div>
+          </div>
+        </div>
+        <div class="ui col-12">
+          <h2>Creativity</h2>
+
+          <div class="uibarout">
+            <div class="uibarin"></div>
+          </div>
+        </div>
+
+        <div class="ui col-12">
+          <h2>Proactivity</h2>
+
+          <div class="uibarout">
+            <div class="devbarin"></div>
+          </div>
+        </div>
+
+        <div class="ui col-12">
+          <h2>Stress Management</h2>
+
+          <div class="uibarout">
+            <div class="grbarin"></div>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -179,10 +246,11 @@
         <div class="card-service col-4 align-center justify-between text-center mb-1">
           <img class="icon back-color-transparent" src="./assets/img/gran-ancla.svg" alt="">
 
-          <h2 class="title-service">UI / UX Design</h2>
+          <h2 class="title-service">Custom Software Development</h2>
 
           <h3 class="description-service">
-            Tempore corrupti tmporibus fuga aerum asperiores fugit laudantium
+            Tailor-made solutions for desktop, web, and mobile applications, ensuring functionality that meets your
+            specific requirements.
           </h3>
         </div>
 
@@ -192,17 +260,53 @@
           <h2 class="title-service">Web & App Development</h2>
 
           <h3 class="description-service">
-            Tempore corrupti tmporibus fuga aerum asperiores fugit laudantium
+            From simple websites to complex web applications, I leverage the latest technologies in HTML, CSS,
+            JavaScript, React, and Node.js to create responsive and user-friendly online platforms.
           </h3>
         </div>
 
         <div class="card-service col-4 align-center justify-between text-center mb-1">
           <img class="icon back-color-transparent" src="./assets/img/camera.svg" alt="">
 
-          <h2 class="title-service">Photography</h2>
+          <h2 class="title-service">IoT Solutions</h2>
 
           <h3 class="description-service">
-            Tempore corrupti tmporibus fuga aerum asperiores fugit laudantium
+            Harness the power of the Internet of Things with custom IoT applications, utilizing technologies like MQTT,
+            LoRaWAN, and ESP32 for smart device integration and management.
+          </h3>
+        </div>
+      </div>
+      <div class="card-services d-flex align-center justify-between">
+        <div class="card-service col-4 align-center justify-between text-center mb-1">
+          <img class="icon back-color-transparent" src="./assets/img/gran-ancla.svg" alt="">
+
+          <h2 class="title-service">Data Visualization and Analytics</h2>
+
+          <h3 class="description-service">
+            Transform data into actionable insights with tools like Python, Pandas, Matplotlib, and Seaborn, ideal for
+            business intelligence and decision-making processes.
+          </h3>
+        </div>
+
+        <div class="card-service col-4 align-center justify-between text-center mb-1">
+          <img class="icon back-color-transparent" src="./assets/img/smartphone.svg" alt="">
+
+          <h2 class="title-service">Cloud Services</h2>
+
+          <h3 class="description-service">
+            Deployment and management of applications on cloud platforms like AWS and Google Cloud Platform, enhancing
+            scalability and security.
+          </h3>
+        </div>
+
+        <div class="card-service col-4 align-center justify-between text-center mb-1">
+          <img class="icon back-color-transparent" src="./assets/img/camera.svg" alt="">
+
+          <h2 class="title-service">Training and Consultation</h2>
+
+          <h3 class="description-service">
+            Share my expertise through tailored training sessions or consultations, helping you or your team enhance
+            technical skills in software development, IoT, and more.
           </h3>
         </div>
       </div>
