--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div>
 
         <div class="card-service col-4 align-center justify-between text-center mb-1">
-          <img class="icon back-color-transparent" src="./assets/img/camera.svg" alt="">
+          <img class="icon back-color-transparent" src="./assets/img/iot-icon.svg" alt="">
 
           <h2 class="title-service">IoT Solutions</h2>
 
@@ -278,7 +278,7 @@
       </div>
       <div class="card-services d-flex align-center justify-between">
         <div class="card-service col-4 align-center justify-between text-center mb-1">
-          <img class="icon back-color-transparent" src="./assets/img/gran-ancla.svg" alt="">
+          <img class="icon back-color-transparent" src="./assets/img/icons8-puzzle.svg" alt="">
 
           <h2 class="title-service">Data Visualization and Analytics</h2>
 
@@ -289,7 +289,7 @@
         </div>
 
         <div class="card-service col-4 align-center justify-between text-center mb-1">
-          <img class="icon back-color-transparent" src="./assets/img/smartphone.svg" alt="">
+          <img class="icon back-color-transparent" src="./assets/img/cloud-1.svg" alt="">
 
           <h2 class="title-service">Cloud Services</h2>
 
@@ -414,9 +414,9 @@
               <img class="technology-icon" src="assets/img/django.svg" alt="Django" title="Django">
               <img class="technology-icon" src="assets/img/html-5.svg" alt="HTML-5" title="HTML-5">
               <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
-              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/chartjs.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/sqlite.svg" alt="postgresql" title="postgresql">
+              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
+              <img class="technology-icon" src="assets/img/chartjs.svg" alt="Chartjs" title="Chartjs">
+              <img class="technology-icon" src="assets/img/sqlite.svg" alt="Sqlite" title="Sqlite">
             </div>
 
             <button class="button-git">
@@ -441,12 +441,12 @@
             </p>
 
             <div class="technologies-list">
-              <img class="technology-icon" src="assets/img/typescript.svg" alt="Java" title="Java">
-              <img class="technology-icon" src="assets/img/angular.svg" alt="Java FX" title="Java FX">
-              <img class="technology-icon" src="assets/img/ionic.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/android.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/sass.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/api.svg" alt="postgresql" title="postgresql">
+              <img class="technology-icon" src="assets/img/typescript.svg" alt="TypeScript" title="TypeScript">
+              <img class="technology-icon" src="assets/img/angular.svg" alt="Angular" title="Angular">
+              <img class="technology-icon" src="assets/img/ionic.svg" alt="Ionic" title="Ionic">
+              <img class="technology-icon" src="assets/img/android.svg" alt="Android" title="Android">
+              <img class="technology-icon" src="assets/img/sass.svg" alt="SASS" title="SASS">
+              <img class="technology-icon" src="assets/img/api.svg" alt="API" title="API">
             </div>
 
 
@@ -477,8 +477,8 @@
               <img class="technology-icon" src="assets/img/django.svg" alt="Django" title="Django">
               <img class="technology-icon" src="assets/img/html-5.svg" alt="HTML-5" title="HTML-5">
               <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
-              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/sqlite.svg" alt="postgresql" title="postgresql">
+              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
+              <img class="technology-icon" src="assets/img/sqlite.svg" alt="Sqlite" title="Sqlite">
             </div>
 
             <button class="button-git">
@@ -511,11 +511,11 @@
             </p>
 
             <div class="technologies-list">
-              <img class="technology-icon" src="assets/img/PHP.svg" alt="Java" title="Java">
-              <img class="technology-icon" src="assets/img/wordpress.svg" alt="Java FX" title="Java FX">
-              <img class="technology-icon" src="assets/img/woocommerce.svg" alt="Java FX" title="Java FX">
-              <img class="technology-icon" src="assets/img/hostinger.svg" alt="postgresql" title="postgresql">
-              <img class="technology-icon" src="assets/img/mysql-official.svg" alt="Java FX" title="Java FX">
+              <img class="technology-icon" src="assets/img/PHP.svg" alt="PHP" title="PHP">
+              <img class="technology-icon" src="assets/img/wordpress.svg" alt="Wordpress" title="Wordpress">
+              <img class="technology-icon" src="assets/img/woocommerce.svg" alt="Woocommerce" title="Woocommerce">
+              <img class="technology-icon" src="assets/img/hostinger.svg" alt="Hostinger" title="Hostinger">
+              <img class="technology-icon" src="assets/img/mysql-official.svg" alt="MySQL" title="MySQL">
             </div>
 
             <button class="button-git">
@@ -553,16 +553,59 @@
             </p>
 
             <div class="technologies-list">
-              <img class="technology-icon" src="assets/img/javascript-1.svg" alt="Python" title="Python">
+              <img class="technology-icon" src="assets/img/javascript-1.svg" alt="JavaScript" title="JavaScript">
               <img class="technology-icon" src="assets/img/html-5.svg" alt="HTML-5" title="HTML-5">
               <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
-              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/Highcharts.svg" alt="HTML-5" title="HTML-5">
-              <img class="technology-icon" src="assets/img/Firebase.svg" alt="postgresql" title="postgresql">
+              <img class="technology-icon" src="assets/img/bootstrap.svg" alt="Bootstrap" title="Bootstrap">
+              <img class="technology-icon" src="assets/img/Highcharts.svg" alt="Highcharts" title="Highcharts">
+              <img class="technology-icon" src="assets/img/Firebase.svg" alt="Firebase" title="Firebase">
             </div>
 
             <button class="button-git">
               <a href="https://ubitherm.web.app/" target="_blank">
+                <img class="icon-git" src="./assets/img/github.svg" alt="Github">
+              </a>
+
+            </button>
+          </div>
+        </div>
+        <div class="card-container">
+          <img class="img" src="assets/img/Luminarias.png" alt="">
+
+          <br>
+
+          <div class="second-cantainer">
+            <h2>IoT Smart Lighting System at Centro Internacional de Física</h2>
+
+            <p>
+              This innovative IoT Smart Lighting System at the International Center for Physics is designed to optimize
+              energy consumption and maintenance of lighting fixtures. It enables real-time monitoring of energy use,
+              helping to identify fixtures that may be consuming abnormal amounts of energy due to damage or
+              malfunction. The system also provides updates on the operational status of each light, including on and
+              off times, and allows for the remote control of lighting operations. Additionally, it features an
+              automated system to detect damaged lights, ensuring timely corrective maintenance and enhancing overall
+              efficiency and safety.
+            </p>
+
+            <div class="technologies-list">
+              <img class="technology-icon" src="assets/img/javascript-1.svg" alt="Javascript" title="Javascript">
+              <img class="technology-icon" src="assets/img/react-2.svg" alt="React" title="React">
+              <img class="technology-icon" src="assets/img/html-5.svg" alt="HTML-5" title="HTML-5">
+              <img class="technology-icon" src="assets/img/css-3.svg" alt="CSS-3" title="CSS-3">
+              <img class="technology-icon" src="assets/img/tailwind-css-1.svg" alt="Tailwind" title="Tailwind">
+              <img class="technology-icon" src="assets/img/leaflet-1.svg" alt="Leaflet" title="Leaflet">
+              <img class="technology-icon" src="assets/img/osm.svg" alt="Open Street Map" title="Open Street Map">
+              <img class="technology-icon" src="assets/img/socket-io.svg" alt="Socket-io" title="Socket-io">
+              <img class="technology-icon" src="assets/img/mqtt-logo-transp.svg" alt="MQTT" title="MQTT">
+              <img class="technology-icon" src="assets/img/nodejs-icon.svg" alt="Nodejs" title="Nodejs">
+              <img class="technology-icon" src="assets/img/express-109.svg" alt="Express" title="Express">
+              <img class="technology-icon" src="assets/img/docker-1.svg" alt="Docker" title="Docker">
+              <img class="technology-icon" src="assets/img/arduino-1.svg" alt="Arduino" title="Arduino">
+              <img class="technology-icon" src="assets/img/mongodb-icon-1.svg" alt="MongoDB" title="MongoDB">
+            </div>
+
+            <button class="button-git">
+              <a href="https://luminarias-cif-frontend-md6k.vercel.app/auth/login" target="_blank">
                 <img class="icon-git" src="./assets/img/github.svg" alt="Github">
               </a>
 
