--- a/index.html
+++ b/index.html
@@ -811,28 +811,9 @@
         </div>
         <h3 class="mb-1">Email: <span>davalerova@protonmail.com</span></h3>
         <h3 class="mb-1">Addres: <span>Bogotá, Colombia</span></h3>
-        <h3 class="mb-1">Phone: <span>+57 3125794335</span></h3>
+        <h3 class="mb-1">Phone: <span>+57 </span></h3>
         <h3 class="mb-1">FOLLOW ME</h3>
-        <div class="social-icon mb-120">
-          <a href="https://github.com/davalerova" target="_blank">
-            <img class="icon" src="./assets/img/github.svg" alt="Github">
-          </a>
-
-          <a href="https://codepen.io/davalerova" target="_blank">
-            <img class="icon" src="./assets/img/codepen.svg" alt="Codepen">
-          </a>
-
-          <a href="https://www.linkedin.com/in/david-andres-valero-vanegas/" target="_blank">
-            <img class="icon" src="./assets/img/l.svg" alt="Linkedin">
-          </a>
-
-          <a href="https://twitter.com/DavalerovaDavid" target="_blank">
-            <img class="icon" src="./assets/img/t.svg" alt="Twitter">
-          </a>
-
-          <a href="https://www.instagram.com/davalerova/" target="_blank">
-            <img class="icon" src="./assets/img/instagram.svg" alt="Instagram">
-          </a>
+        
         </div>
       </div>
     </div>
